# BMM-POS

./: .gitignore  .replit  CLAUDE.md  COMMERCIAL_LAUNCH_READINESS.md  HANDOFF-2026-04-06.md  PLAN_error_dashboard.md  SECURITY_REMEDIATION_PLAN.md  VENDOR_LANDING_PLAN.md  cron_digest.py  nixpacks.toml  package-lock.json  product_urls.txt  pyproject.toml  railway-trigger.txt  railway.toml  replit.md  requirements.txt  scrape_log 2.txt  scrape_resume_log 2.txt  scraped_items.csv  skills-lock 2.json  squirrel.toml  task-admin-ux.md  task-bulk-sale.md  task-fix-gc-receipt-void.md  task-fix-items-barcode-search.md  task-inventory-verify-1-backend.md  task-inventory-verify-2-frontend.md  task-inventory-verify-3-unverified-view.md  task-label-quality.md  task-mobile-ux-1-critical.md  task-mobile-ux-2-high.md  task-mobile-ux-3-medium.md  task-pagination-controls.md  task-pagination-first-last.md  task-pos-discounts.md  task-pos-ux.md  task-receipt-close-and-no-cashier.md  task-save-and-add-another.md  task-sort-and-pagination-fixes.md  (+8 more)
.skills/: frontend-developer.md
BMM POS/: POYNT-PHASE4-PROMPT.md  POYNT-SEMI-INTEGRATED-PROMPT.md  cursor-task-1-fix-vendor-balance-api.md  cursor-task-2-consolidate-admin-dashboard.md  cursor-task-3-rent-payouts-tab.md  cursor-task-4-dual-balance-frontend.md  cursor-task-PRIORITY-fix-vendor-balance-display.md  cursor-task-PRIORITY1-remove-consignment.md  cursor-task-bulk-verify-all-vendors.md  cursor-task-fix-bulk-csv-header.md  cursor-task-fix-bulk-upload-performance.md  cursor-task-fix-timezone-cst.md  cursor-task-fix-timezone-wall-clock.md  (+15 more)
(+199 files in other folders)
